made Terri Roberts text changes.

--- a/arch/code/abatePropertyWithContractor/index.html
+++ b/arch/code/abatePropertyWithContractor/index.html
@@ -107,8 +107,7 @@ Abator/abateProperty</td>
 </tr>
 <tr>
 <td>The Contractor abates the Property. The
-Contractor takes photographs of before and after abatement. Camera
-provided by Austin Code Compliance to ensure DateStamp on Photograph.
+Contractor takes photographs of before and after abatement. 
 The Contractor provides DumpTickets (to verify lawful disposal of items
 at a dump, includes weight of items dumped).</td>
 </tr>
@@ -131,8 +130,7 @@ District Representative/superviseCleanup</td>
 <td rowspan="2"> </td>
 </tr>
 <tr>
-<td>The APD District Representative supervises
-the cleanup to control public access and safety.</td>
+<td>The APD District Representative supervises control of public access and safety.</td>
 </tr>
 <tr>
 <td rowspan="2">005</td>
@@ -174,52 +172,9 @@ Management System/updateCodeViolationCase</td>
 <td rowspan="2"> </td>
 </tr>
 <tr>
-<td>The user updates the CodeViolationCase with
-relevant information to the case. If the CodeViolationCase generated a
-StopWorkOrder, the StopWorkOrder is attached to the CodeViolationCase.
-The user attaches a copy of the DiagramOfWorkRequired. If a board and
-secure occurs, a BoardAndSecureBill is attached to the
-CodeViolationCase by Austin Code Admin. If a sign was removed, the
-Austin Code Officer adds the sign and information to the
-CodeViolationCase. Additionally, if CautionBarriers were placed,
-information on the CautionBarriers is added to the CodeViolationCase.
-If property information was updated, the Case Management System
-includes updated property information.
-The user updates the CodeViolationCase with information relevant to the
-change. This includes, but is not limited to, BoardAndSecureBill,
-PropertyAbatementBill, FollowUpNotes, photographs (boarded,
-non-boarded, posted notifications, placards), emails, PhoneCallSummary,
-other relevant information and inter-department communications. If a
-ServiceCase is created, the Public Information Office Admin adds notes
-to the CodeViolationCase including the CitizenNeed and
-ServicesRecommended for ServiceCase. If CorrectiveResources are
-identified, the user updates the CodeViolationCase with a list of
-CorrectiveResources provided (three resources) and notes of contact
-with Owner/Tenant. HardshipReason is added to the CodeViolationCase.
-If new violations are identified, the user adds the new violation to
-the Case Management System and the violation is attached to the
-original CodeComplaintCase. If a TitleSearch is completed, the
-TitleSearch is added to the CodeViolationCase. If additional
-LegallyInterestedParties are identified, the parties are added to the
-CodeViolationCase. If a NoticeOfViolation is generated, the
-NoticeOfViolation is added to the CodeViolationCase. If posted at the
-property, photographs are attached to the CodeViolationCase. If the
-NoticeOfViolation is delivered and a certified mail receipt is
-received, the receipt is added to the CodeViolationCase.
-If a citation is created, the Case Management System attaches the
-citation to the CodeViolationCase. Additionally, the user scans and
-uploads a copy of the physical citation to the Case Management System.
-If an AdministrativeHearingWarning is issued, the user updates the
-CodeViolationCase with information on the issued
-AdministrativeHearingWarning.
-If an AdministrativeHearingCitation is issued, the user updates the
-CodeViolationCase with the AdministrativeHearingCitation, and a
-LegalCase is created. The user scans and uploads returned liens to the
-CodeViolationCase. If a lien is filed for the property, the TRVNumber
-is added to the CodeViolationCase.
-The Austin Code Officer updates the CodeViolationCase with information
-concerning Violation extensions, written request, reason for
-approval/denial, etc.</td>
+<td>The user updates the CodeViolationCase with relevant information to the case. If the CodeViolationCase generated a StopWorkOrder, the StopWorkOrder is attached to the CodeViolationCase. The user attaches a copy of the DiagramOfWorkRequired. If a board and secure occurs, a BoardAndSecureBill is attached to the CodeViolationCase by Austin Code Admin. If a Placard or notice was removed, the Austin Code Officer adds the placard or notice information to the CodeViolationCase. Additionally, if CautionBarriers were placed, information on the CautionBarriers is added to the CodeViolationCase. If property information was updated, the Case Management System includes updated property information.
+The user updates the CodeViolationCase with information relevant to the change. This includes, but is not limited to, BoardAndSecureBill, PropertyAbatementBill, FollowUpNotes, photographs (boarded, non-boarded, posted notifications, placards), emails, PhoneCallSummary, other relevant information and inter-department communications. If a ServiceCase is created, the Public Information Office Admin adds notes to the CodeViolationCase including the CitizenNeed and ServicesRecommended for ServiceCase. If CorrectiveResources are identified, the user updates the CodeViolationCase with a list of CorrectiveResources provided (three resources) and notes of contact with Owner/Tenant. HardshipReason is added to the CodeViolationCase. If new violations are identified, the user adds the new violation to the Case Management System and the violation is attached to the original CodeComplaintCase. If a TitleSearch is completed, the TitleSearch is added to the CodeViolationCase. If additional LegallyInterestedParties are identified, the parties are added to the CodeViolationCase. If a NoticeOfViolation is generated, the NoticeOfViolation is added to the CodeViolationCase. If posted at the property, photographs are attached to the CodeViolationCase. If the NoticeOfViolation is delivered and a certified mail receipt is received, the receipt is added to the CodeViolationCase.
+If a citation is created, the Case Management System attaches the citation to the CodeViolationCase. Additionally, the user scans and uploads a copy of the physical citation to the Case Management System. If an AdministrativeHearingWarning is issued, the user updates the CodeViolationCase with information on the issued AdministrativeHearingWarning. If an AdministrativeHearingCitation is issued, the user updates the CodeViolationCase with the AdministrativeHearingCitation, and a LegalCase is created. The user scans and uploads returned liens to the CodeViolationCase. If a lien is filed for the property, the TRVNumber is added to the CodeViolationCase. The Austin Code Officer updates the CodeViolationCase with information concerning Violation extensions, written request, reason for approval/denial, etc. If there is a payment, then the CodeViolationCase is updated by the user to include the payment.</td>
 </tr>
 </tbody>
 </table>
