updated with Terri Roberts Changes

--- a/arch/code/approveAbatementListAdjustment/index.html
+++ b/arch/code/approveAbatementListAdjustment/index.html
@@ -70,7 +70,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Contractor contacts the Austin Code Officer to report the WorkRequiredList doesn't match the actual Abatement required. The Contractor requests the Austin Code Officer adjusts the WorkRequiredList. The Austin Code Officer verbally approves the change while the Contractor is on-site, unless the change exceeds $1000 in excess of WorkRequiredList. After work is completed the Contractor sends a written request for WorkRequiredList change (email).</td>
+<td>The Contractor contacts the Austin Code Officer to report the WorkRequiredList doesn't match the actual Abatement required. The Contractor requests the Austin Code Officer adjust the WorkRequiredList. The Austin Code Officer provides written approval while the Contractor is on site with the Code Officer, unless the change causes WorkRequiredList to exceed $1000. After work is completed the Contractor sends a written request for WorkRequiredList change (email).</td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
@@ -78,7 +78,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer submits the WorkRequiredList to the Chain of Command. The Chain of Command evaluates the WorkRequiredList and either approves or denies the list. If approved, the Chain of Command completes the WorkRequiredChecklist (initials checklist). If denied, the Chain of Command returns the list to the Austin Code Officer with notes requesting changes. If the WorkRequiredList estimate changes, and exceeds $1000, the Austin Code Officer requests the Chain of Command approves the new estimate on the WorkRequiredList.</td>
+<td>The Austin Code Officer submits the WorkRequiredListPacket to the Chain of Command. The Chain of Command evaluates the WorkRequiredListPacket and either approves or denies it. If approved, the Chain of Command completes the WorkRequiredChecklist (initials checklist). If denied, the Chain of Command returns the list to the Austin Code Officer with notes requesting changes. </td>
 </tr>
 <tr>
 <td rowspan="2">003</td>
