Terri Roberts changes.

--- a/arch/code/conductAdministrativeHearing/index.html
+++ b/arch/code/conductAdministrativeHearing/index.html
@@ -79,7 +79,7 @@ The Austin Code Legal Program Coordinator updates the LegalCase with notes as ne
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer issues an AdminHearingWarning. The AdminHearingWarning gives the Violator 10 days to come into compliance. If Code Officer gets signature from Owner on AdminHearingWarning, then no NoticeOfViolation is sent. If no signature by Owner, then NoticeOfViolation is sent to Owner and Tenant.</td>
+<td>The Austin Code Officer issues an AdminHearingWarning. The AdminHearingWarning gives the Violator 10 days to come into compliance.  Code Officer attempts to get owner's signature. If the Austin Code Officer does not get signature from owner on AdminHearingWarning, then Austin Code Officer posts warning on site. Austin Code Officer sends NoticeOfViolation no matter what. </td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
@@ -176,7 +176,7 @@ If there is a payment then the CodeViolationCase is updated by the user to inclu
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Legal Program Specialist requests the Austin Code Administrative Hearing Coordinator to review the AdminHearingPacket. The Austin Code Administrative Hearing Coordinator reviews the AdminHearingPacket and focuses specifically on pictures that substantiate the warning and citation, as well as the current photos (taken three days before the hearing).</td>
+<td>The Austin Code Administrative Hearing Coordinator reviews the AdminHearingPacket and focuses specifically on pictures that substantiate the warning and citation, as well as the current photos (taken three days before the hearing).</td>
 </tr>
 <tr>
 <td rowspan="2">013</td>
@@ -200,7 +200,7 @@ If there is a payment then the CodeViolationCase is updated by the user to inclu
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Administrative Hearing Coordinator meets with the Austin Code Officer to prepare for the AdministrativeHearing. This meeting typically occurs two days before the AdministrativeHearing.</td>
+<td>The Austin Code Administrative Hearing Coordinator meets with the Austin Code Officer to prepare for the AdministrativeHearing. This meeting typically occurs a specified number of days before the AdministrativeHearing.</td>
 </tr>
 <tr>
 <td rowspan="2">016</td>
@@ -224,7 +224,7 @@ If there is a payment then the CodeViolationCase is updated by the user to inclu
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Admin Hearing Coordinator determines if a Violation occurred. If Violator is in compliance at hearing a lower penalty may be assessed. Additionally, the Admin Hearing Coordinator may setup a ComplianceHearing, assess a Penalty. The Violator is provided 10 days to come into compliance. </td>
+<td>The Admin Hearing Officer determines if a Violation occurred. If Violator is in compliance at hearing a lower penalty may be assessed.  Admin Hearing Coordinator may setup a ComplianceHearing; Admin Hearing Officer may assess a Penalty. The Violator is provided 10 days to come into compliance.  </td>
 </tr>
 <tr>
 <td rowspan="2">019</td>
@@ -272,7 +272,7 @@ If there is a payment then the CodeViolationCase is updated by the user to inclu
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Legal Program Coordinator sends the BillNotice to the Violator both through regular mail and certified mail. </td>
+<td>TThe Austin Code Legal Program Specialist sends the BillNotice to the Violator both through regular mail and certified mail. </td>
 </tr>
 <tr>
 <td rowspan="2">025</td>
