--- a/arch/municourt/modifyCollectionFee/index.html
+++ b/arch/municourt/modifyCollectionFee/index.html
@@ -36,10 +36,10 @@
 <span style="font-weight: bold;">Modify Collection Fee<br />Use Case Model</span>
 </td></tr></table>
 
-<p><b>Scope: </b> As required by law, the case management system must recalculate the collection fee as the Defendant receives partial jail time 
-credit or as the Defendant's community service is applied to a case in third party collections. The system must log a statement indicating a 
-collection fee was added, reduced or removed. If reduced, the system must log the reduced amount, date and time. The system must maintain a 
-reference of the original collection fee amount as well.
+<p><b>Scope: </b> As required by law, the case management system recalculates the collection fee when the Defendant receives partial jail time 
+credit or as the Defendant's community service is applied to a case already in third party collections. The case management system also logs a statement indicating a 
+collection fee was added, reduced or removed. If reduced, the system logs the reduced amount, date and time. The system maintains a 
+record of the original collection fee amount as well.
 </p>
 <!-- IF INTERACTION OVERVIEW IS INCLUDED 
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
