Terri Roberts modifications

--- a/arch/code/inspectLodgingBusiness/index.html
+++ b/arch/code/inspectLodgingBusiness/index.html
@@ -66,13 +66,12 @@
 <tr><th width="9%">Req#</th><th width="70%">Type/Interface - Requirement Description</th><th>Performance</th></tr>
 <tr>
 <td rowspan="2">001</td>
-<td style="font-weight: bold; background: lightgray;">Austin Code Officer/performFollowUpInspection</td>
+<td style="font-weight: bold; background: lightgray;">Austin Code Officer/performLodgingInspection</td>
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>Follow-up Inspection for Lodging License: The Austin Code Officer checks for GFCI outlets, smoke detectors (set off and sound), trip hazards, cracked windows, broken windows, weather stripping, temperature of hot water, pest infestation, secured balcony railing, overhead light inspection outside, loose shower spouts, secured toilet, faucet handles, locks on windows (if three feet up). Ten percent of the total rooms are inspected. Checklist: Structure Maintenance Report. 
-Follow-up inspection for Waste Hauler: A WasteHaulerApplication is turned in, and the Austin Code Officer works with the Austin Code Program Specialist to ensure the WasteHaulerApplication is complete. 
-If Illegal Dumping, the Austin Code Officer ensures property is abated and takes photographs.</td>
+<td>Follow-up Inspection for Lodging License: The Austin Code Officer checks for GFCI outlets, smoke detectors (set off and sound), trip hazards, cracked windows, broken windows, weather stripping, temperature of hot water, pest infestation, secured balcony railing, overhead light inspection outside, loose shower spouts, secured toilet, faucet handles, locks on windows (if three feet up). Ten percent of the total rooms are inspected. Checklist: Structure Maintenance Report.
+The Austin Code Officer takes photographs to document the Inspection.</td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
