Terri Roberts changes.

--- a/arch/code/issueLodgingLicense/index.html
+++ b/arch/code/issueLodgingLicense/index.html
@@ -74,11 +74,11 @@
 </tr>
 <tr>
 <td rowspan="2">002</td>
-<td style="font-weight: bold; background: lightgray;">Austin 311/provideLodgingLicenseApplication</td>
+<td style="font-weight: bold; background: lightgray;">Austin 311/intakeLodgingLicenseApplication</td>
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Lodging Business contacts Austin 311 and requests a LodgingLicenseApplication be sent to them. They provide their name, phone number, email and physical address.</td>
+<td>The Lodging Business contacts Austin 311 and requests a LodgingLicenseApplication be sent to them. They provide their name, phone number, email and physical address and forwards info to Austin Code Program Specialist. </td>
 </tr>
 <tr>
 <td rowspan="2">003</td>
