terri roberts changes

--- a/arch/code/escalateCodeViolationCase/index.html
+++ b/arch/code/escalateCodeViolationCase/index.html
@@ -76,7 +76,7 @@ The Austin Code Officer uses the Case Management System to update the CodeViolat
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Austin Code Officer requests the Case Management System to look up certificate of occupancy, site plan, building permits, electrical permits, plumbing permits, mechanical permits, other permits, change of use, plan review, variances, neighborhood plans, conditional overlays, licensing, and CaseHistory.</td>
+<td>The Austin Code Officer uses the Case Management System to look up certificate of occupancy, site plan, building permits, electrical permits, plumbing permits, mechanical permits, other permits, change of use, plan review, variances, neighborhood plans, conditional overlays, licensing, and CaseHistory. </td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
