terri Roberts changes

--- a/arch/code/extendViolationResolutionTime/index.html
+++ b/arch/code/extendViolationResolutionTime/index.html
@@ -70,7 +70,7 @@
 <td rowspan="2">  </td>
 </tr>
 <tr>
-<td>The Responsible party requests a Violation extension to the Austin Code Officer. Requests are completed in writing and include the plan to resolve the Violation. The Responsible Party may also request an extension in person to the Austin Code Officer, in which case the Notification is created by the Austin Code Officer.</td>
+<td>The Responsible party requests a Violation extension to the Austin Code Officer. Requests should be completed in writing and include the plan to resolve the Violation. If requests are made verbally, requests must be submitted in event log.  The Responsible Party may also request an extension in person to the Austin Code Officer, in which case the Notification is created by the Austin Code Officer.</td>
 </tr>
 <tr>
 <td rowspan="2">002</td>
