--- a/arch/code/createCodeComplaintCase/index.html
+++ b/arch/code/createCodeComplaintCase/index.html
@@ -98,7 +98,7 @@
 </tr>
 
 <td rowspan="2">005</td>
-<td style="font-weight: bold; background: lightgray;">Enterprise Servicve Bus/createCodeComplaintCase</td>
+<td style="font-weight: bold; background: lightgray;">Enterprise Service Bus/createCodeComplaintCase</td>
 <td rowspan="2">  </td>
   </tr>
 <tr>
